Fix home layout scrollbar range

--- a/src/renderer/assets/scrollbar/_scrollbar.scss
+++ b/src/renderer/assets/scrollbar/_scrollbar.scss
@@ -1,6 +1,5 @@
 * {
   &::-webkit-scrollbar {
-    display: none;
     width: 4px;
   }
 
